--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,15 @@ language: java
 
 jdk:
   - oraclejdk8
+
+addons:
+  sonarcloud:
+    organization: "rovingeye-github"
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
